# grc_fixes_monitoring

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: create_release.yml  pull_request.yml  refresh_issues_mapping_data.yml
data/2026-03-06/: alt_scaffold_placement.txt  chr10_issues.xml  chr11_issues.xml  chr12_issues.xml  chr13_issues.xml  chr14_issues.xml  chr15_issues.xml  chr16_issues.xml  chr17_issues.xml  chr18_issues.xml  chr19_issues.xml  chr20_issues.xml  chr21_issues.xml  chr22_issues.xml  chr3_issues.xml  chr4_issues.xml  chr5_issues.xml  chr6_issues.xml  chr7_issues.xml  chr8_issues.xml  chr9_issues.xml  chrNA_issues.xml  chrUn_issues.xml  chrX_issues.xml  chrY_issues.xml  patch_type
docs/: data_sources.md  tests.md  workflow.md
grc_fixes_monitor/: grc_fixes.py  parse_grc_fixes.py
grc_fixes_monitor/parsers/: grc_issues.py  patch_type.py  scaffoled_placement.py
tests/: conftest.py  test_grc_fixes.py  test_grc_issues_parser.py  test_parse_grc_fixes.py  test_patch_type_parser.py  test_scaffold_placement_parser.py
tests/data/: alt_scaffold_placement.txt  chr1_issues.xml  chr2_issues.xml  patch_type
tests/fixtures/: HG-1342.html  HG-1343.html  HG-173.html  HG-2104.html  HG-2282.html  HG-459.html  alt_scaffold_placement.txt  expected_final_records.tsv  issue_not_found.html  patch_type.txt
