[project]
name = "grc-fixes-monitoring"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.13.4",
  "GitPython==3.1.41",
  "requests==2.32.4",
  "typing_extensions==4.14.0",
]

[dependency-groups]
dev = [
  "coverage==7.9.0",
  "gherkin-official==39.0.0",
  "ipykernel>=7.2.0",
  "Mako==1.3.10",
  "parse==1.20.2",
  "parse_type==0.6.4",
  "pytest==8.4.0",
  "pytest-cov==6.2.1",
  "pytest-mock==3.14.1",
]
