[project]
name = "grc-fixes-monitoring"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.14.3",
  "GitPython==3.1.41",
  "requests==2.33.0",
  "typing_extensions==4.15.0",
]

[dependency-groups]
dev = [
  "coverage==7.13.5",
  "gherkin-official==39.0.0",
  "ipykernel>=7.2.0",
  "Mako==1.3.10",
  "parse==1.21.1",
  "parse_type==0.6.6",
  "pytest==9.0.2",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
]
